--- a/team/index.html
+++ b/team/index.html
@@ -11,8 +11,9 @@
     <link rel="stylesheet" href="css/font.css">
     <link rel="stylesheet" href="css/slick.css">
     <script src="js/jquery-3.6.4.min.js"></script>
-    <script src="js/slick.js"></script>
+    <script src="https://kit.fontawesome.com/d5134b74ca.js" crossorigin="anonymous"></script>
     <script src="js/main.js"></script>
+    <script src="js/slick.js"></script>
 </head>
 
 <body>
@@ -84,7 +85,47 @@
             </div>
         </div>
         <div id="menuWrap">
-            
+            <div class="productWrap">
+                <h2><span>노원당</span> Menu</h2>
+
+            </div>
+            <div class="product">
+                <div>
+                    <img src="images/KakaoTalk_20230502_130902181.jpg" alt="">
+                    <div class="product_text">상품설명입니다.</div>
+                </div>
+                <div>
+                    <img src="images/KakaoTalk_20230502_130904330.png" alt="">
+                    <div class="product_text">상품설명입니다.</div>
+                </div>
+                <div>
+                    <img src="images/KakaoTalk_20230502_130904391.png" alt="">
+                    <div class="product_text">상품설명입니다.</div>
+                </div>
+                <div>
+                    <img src="images/KakaoTalk_20230502_130904457.png" alt="">
+                    <div class="product_text">상품설명입니다.</div>
+                </div>
+                <div>
+                    <img src="images/KakaoTalk_20230502_130904521.png" alt="">
+                    <div class="product_text">상품설명입니다.</div>
+                </div>
+                <div>
+                    <img src="images/KakaoTalk_20230502_130905211.png" alt="">
+                    <div class="product_text">상품설명입니다.</div>
+                </div>
+                <div>
+                    <img src="images/KakaoTalk_20230502_130905120.png" alt="">
+                    <div class="product_text">상품설명입니다.</div>
+                </div>
+                <div>
+                    <img src="images/KakaoTalk_20230502_130926289.png" alt="">
+                    <div class="product_text">상품설명입니다.</div>
+                </div>
+            </div>
+        </div>
+        <div id="content">
+            <div class="News"></div>
         </div>
     </div>
 </body>
