--- a/team/index.html
+++ b/team/index.html
@@ -18,65 +18,67 @@
 
 <body>
     <div id="wrap">
-        <header>
-            <div class="header_inner">
-                <div class="logoBox">
-                    <h1><a href="index.html">노원당</a></h1>
+        <div id="gnb_static">
+            <header>
+                <div class="header_inner">
+                    <div class="logoBox">
+                        <h1><a href="index.html">노원당</a></h1>
+                    </div>
+                    <div class="loginBox">
+                        <ul class="logingnb">
+                            <li><a href="#">로그인</a></li>
+                            <li><a href="#">회원가입</a></li>
+                        </ul>
+                    </div>
                 </div>
-                <div class="loginBox">
-                    <ul class="logingnb">
-                        <li><a href="#">로그인</a></li>
-                        <li><a href="#">회원가입</a></li>
+            </header>
+            <nav>
+                <div class="menuBox">
+                    <ul class="gnb">
+                        <div class="menuCover"></div>
+                        <li>
+                            <a href="#" class="dp1">브랜드소개</a>
+                            <ul class="submenu">
+                                <li><a href="#">브랜드역사</a></li>
+                                <li><a href="#">브랜드약속</a></li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="#" class="dp1">메뉴소개</a>
+                            <ul class="submenu">
+                                <li><a href="#">베스트 상품</a></li>
+                                <li><a href="#">신상품</a></li>
+                                <li><a href="#">식빵</a></li>
+                                <li><a href="#">케이크</a></li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="#" class="dp1">가맹점</a>
+                            <ul class="submenu">
+                                <li><a href="#">프렌차이즈</a></li>
+                                <li><a href="#">가맹문의</a></li>
+                                <li><a href="#">지점안내</a></li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="#" class="dp1">온라인주문</a>
+                            <ul class="submenu">
+                                <li><a href="#">주문하기</a></li>
+                                <li><a href="#">단체주문</a></li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="#" class="dp1">새소식</a>
+                            <ul class="submenu">
+                                <li><a href="#">프로모션</a></li>
+                                <li><a href="#">뉴스</a></li>
+                                <li><a href="#">광고 영상</a></li>
+                            </ul>
+                        </li>
                     </ul>
                 </div>
-            </div>
-        </header>
-        <nav>
-            <div class="menuBox">
-                <ul class="gnb">
-                    <div class="menuCover"></div>
-                    <li>
-                        <a href="#" class="dp1">브랜드소개</a>
-                        <ul class="submenu">
-                            <li><a href="#">브랜드역사</a></li>
-                            <li><a href="#">브랜드약속</a></li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="#" class="dp1">메뉴소개</a>
-                        <ul class="submenu">
-                            <li><a href="#">베스트 상품</a></li>
-                            <li><a href="#">신상품</a></li>
-                            <li><a href="#">식빵</a></li>
-                            <li><a href="#">케이크</a></li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="#" class="dp1">가맹점</a>
-                        <ul class="submenu">
-                            <li><a href="#">프렌차이즈</a></li>
-                            <li><a href="#">가맹문의</a></li>
-                            <li><a href="#">지점안내</a></li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="#" class="dp1">온라인주문</a>
-                        <ul class="submenu">
-                            <li><a href="#">주문하기</a></li>
-                            <li><a href="#">단체주문</a></li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="#" class="dp1">새소식</a>
-                        <ul class="submenu">
-                            <li><a href="#">프로모션</a></li>
-                            <li><a href="#">뉴스</a></li>
-                            <li><a href="#">광고 영상</a></li>
-                        </ul>
-                    </li>
-                </ul>
-            </div>
-        </nav>
+            </nav>
+        </div>
         <div id="banner">
             <div class="bannerImg">
                 <div><img src="images/banner1.jpg" alt="5월은 사랑 케이크"></div>
