--- a/day25/오버라이딩.html
+++ b/day25/오버라이딩.html
@@ -7,16 +7,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>오버라이딩</title>
     <script>
-        var Person = (
-            function Person(x) {
-                this.x = x;
 
-            },
-            Person.prototype.bag = function () {
-                console.log("명품");
-            }
+        // 부모 계층에서 사용한 메소드를 자식계층에서 재정의하여 사용할때 오버라이딩 방식으로 사용한다.
+        var Person = (
+            function () {
+                function Person(x) {
+                    this.x = x;
+                }
+                Person.prototype.bag = function () {  //프로토타입을 사용하여 메소드 추가
+                    console.log("명품");
+                }
+                return Person;
+            }()
         );
 
+        var iam = new Person("마이클");
+        iam.bag = function () {  // 프로토타입이 아닌 인스턴스(객체)에 메소드를 추가
+            console.log("진품"); // 프로토타입을 사용한 메소드가 덮어씌워진 것이 아닌 재정의된 값이 리턴 / 이것을 오버라이딩 이라고 한다. /프로토타입의 메소드는 가려짐 (섀도잉 shadowing)
+        }                       // 인스턴스 메소드는 프로토타입 메소드를 오버라이딩 했다.
+        iam.bag();
     </script>
 </head>
 
