--- a/team_mobile/mobile.html
+++ b/team_mobile/mobile.html
@@ -9,10 +9,29 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/font.css">
+    <script src="js/jquery-3.6.4.min.js"></script>
+    <script src="js/main.js"></script>
 </head>
 
 <body>
     <div id="wrap">
+        <div id="mobileMenuWrap">
+            <div class="mobileMenuBg"></div>
+            <div class="mobileMenu">
+                <div class="mobileCloseBtn">
+                    <div class="btn">
+                        <a href="#" class="line">
+                            <span>메뉴</span>
+                        </a>
+                    </div>
+                    <button type="button">d
+                       dd
+                    </button>
+                </div>
+                <div class="mobileMenuList">
+                </div>
+            </div>
+        </div>
         <header>
             <div class="header_inner">
                 <div class="logo">
@@ -20,12 +39,6 @@
                 </div>
                 <div class="header_nav">
                     <div class="navButton">
-                        <ul class="gnb">
-                            <li><a href="#">1</a></li>
-                            <li><a href="#">1</a></li>
-                            <li><a href="#">2</a></li>
-                            <li><a href="#">1</a></li>
-                        </ul>
                     </div>
                 </div>
             </div>
@@ -35,34 +48,50 @@
                 <div><img src="images/mobile_banner1.jpg" alt="5월은 사랑 케이크"></div>
                 <!-- <div><img src="images/mobile_banner2.jpg" alt="5월은 사랑 케이크"></div> -->
             </section>
-            <section class="menu">
-                <div class="popular menu_box">
-                    <h2>인기상품</h2>
-                    <ul>
-                        <li><a href="#"><img class="img" src="images/bread1.png"></a></li>
-                        <li><a href="#"><img class="img" src="images/bread2.png"></a></li>
-                    </ul>
-                    <div class="more_product">인기상품 더 보기 +</div>
-                </div>
-                <div class="newmenu menu_box">
-                    <h2>신규상품</h2>
-                    <ul>
-                        <li><a href="#"><img class="img" src="images/bread3.png"></a></li>
-                        <li><a href="#"><img class="img" src="images/bread4.png"></a></li>
-                    </ul>
-                    <div class="more_product">신규상품 더 보기 +</div>
-                </div>
-                <div class="cake menu_box">
-                    <h2>케이크</h2>
-                    <ul>
-                        <li><a href="#"><img class="img" src="images/bread1.png"></a></li>
-                        <li><a href="#"><img class="img" src="images/bread2.png"></a></li>
-                    </ul>
-                    <div class="more_product">케이크 더 보기 +</div>
-                </div>
-            </section>
+        </div>
+        <div id="menuWrap">
+            <div class="popular menu_box">
+                <h2>인기상품</h2>
+                <ul>
+                    <li><a href="#"><img class="img" src="images/bread1.png"></a></li>
+                    <li><a href="#"><img class="img" src="images/bread2.png"></a></li>
+                </ul>
+                <button>더보기 +</button>
+            </div>
+            <div class="newmenu menu_box">
+                <h2>신규상품</h2>
+                <ul>
+                    <li><a href="#"><img class="img" src="images/bread3.png"></a></li>
+                    <li><a href="#"><img class="img" src="images/bread4.png"></a></li>
+                </ul>
+                <button>더보기 +</button>
+            </div>
+            <div class="cake menu_box">
+                <h2>케이크</h2>
+                <ul>
+                    <li><a href="#"><img class="img" src="images/bread1.png"></a></li>
+                    <li><a href="#"><img class="img" src="images/bread2.png"></a></li>
+                </ul>
+                <button>더보기 +</button>
+            </div>
+        </div>
+        <div id="newsWrap">
+            <div class="news">
+                <div>1</div>
+                <div>1</div>
+                <div>1</div>
+                <div>1</div>
+            </div>
+        </div>
+        <div id="sns">
+            <div>트위터</div>
+            <div>페이스북</div>
+            <div>인스타그램</div>
         </div>
     </div>
+    <footer>
+        저작권
+    </footer>
 </body>
 
 </html>
