--- a/team_mobile/mobile.html
+++ b/team_mobile/mobile.html
@@ -15,21 +15,62 @@
 
 <body>
     <div id="wrap">
+        <div class="mobileCloseBtn">
+            <div class="btn">
+                <a href="#" class="line">
+                    <span>메뉴</span>
+                </a>
+            </div>
+            <button type="button">
+
+            </button>
+        </div>
         <div id="mobileMenuWrap">
             <div class="mobileMenuBg"></div>
             <div class="mobileMenu">
-                <div class="mobileCloseBtn">
-                    <div class="btn">
-                        <a href="#" class="line">
-                            <span>메뉴</span>
-                        </a>
+                <nav>
+                    <ul>
+                        <li class="na"><a href="#" class="na">브랜드소개</a>
+                            <ul class="sub1">
+                                <li><a href="#">브랜드역사</a></li>
+                                <li><a href="#">브랜드약속</a></li>
+                            </ul>
+                        </li>
+                        <li class="na"><a href="#" class="na">메뉴소개</a>
+                            <ul class="sub1">
+                                <li><a href="#">베스트</a></li>
+                                <li><a href="#">신상품</a></li>
+                                <li><a href="#">식빵</a></li>
+                                <li><a href="#">케이크</a></li>
+                            </ul>
+                        </li>
+                        <li class="na"><a href="#" class="na">가맹점</a>
+                            <ul class="sub1">
+                                <li><a href="#">프렌차이즈</a></li>
+                                <li><a href="#">가맹문의</a></li>
+                                <li><a href="#">지점안내</a></li>
+                            </ul>
+                        </li>
+                        <li class="na"><a href="#" class="na">온라인주문</a>
+                            <ul class="sub1">
+                                <li><a href="#">주문하기</a></li>
+                                <li><a href="#">단체주문</a></li>
+                            </ul>
+                        </li>
+                        <li class="na"><a href="#" class="na">새소식</a>
+                            <ul class="sub1">
+                                <li><a href="#">프로모션</a></li>
+                                <li><a href="#">뉴스</a></li>
+                                <li><a href="#">광고영상</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                    <div class="sub_footer">
+                        <p>고객센터</p>
+                        <p>상담하기</p>
+                        <p>문의하기</p>
                     </div>
-                    <button type="button">d
-                       dd
-                    </button>
-                </div>
-                <div class="mobileMenuList">
-                </div>
+                </nav>
             </div>
         </div>
         <header>
@@ -37,10 +78,7 @@
                 <div class="logo">
                     <h1>노원당</h1>
                 </div>
-                <div class="header_nav">
-                    <div class="navButton">
-                    </div>
-                </div>
+
             </div>
         </header>
         <div id="contents">
