--- a/day27/16_뒤로보내기2.html
+++ b/day27/16_뒤로보내기2.html
@@ -33,7 +33,7 @@
             var three = $(".three");
 
             $(".append").click(function(){
-                one.append(three);
+                one.appendTo(three);
             });
 
 
