--- a/day27/20_아코디언 메뉴.html
+++ b/day27/20_아코디언 메뉴.html
@@ -33,11 +33,13 @@
 
         dl {
             border: 1px solid #000;
+            margin-bottom:10px;
         }
 
         dl dt {
             background: #000;
             color: #fff;
+            padding:10px;
         }
 
         dl dd {
@@ -52,19 +54,28 @@
     <dl class="accordion">
         <dt>메뉴</dt>
         <dd>설명</dd>
-    </dl>
-    <dl class="accordion">
         <dt>메뉴</dt>
         <dd>설명</dd>
     </dl>
     <dl class="accordion">
         <dt>메뉴</dt>
         <dd>설명</dd>
+        <dt>메뉴</dt>
+        <dd>설명</dd>
     </dl>
     <dl class="accordion">
         <dt>메뉴</dt>
         <dd>설명</dd>
+        <dt>메뉴</dt>
+        <dd>설명</dd>
     </dl>
+    <dl class="accordion">
+        <dt>메뉴</dt>
+        <dd>설명</dd>
+        <dt>메뉴</dt>
+        <dd>설명</dd>
+    </dl>
+
     <!-- <div class="slideshow">
         <img src="img/dinner1.jpg" alt="">
         <img src="img/dinner2.jpg" alt="">
