--- a/day27/22_탭메뉴.html
+++ b/day27/22_탭메뉴.html
@@ -84,6 +84,7 @@
         .tabMenuWrap .tabMenu li a.on {
             display: block;
             background: #fff;
+            cursor: default;
         }
     </style>
 </head>
