--- a/project/team/sub/sub.html
+++ b/project/team/sub/sub.html
@@ -31,12 +31,12 @@
             <div class="header__wrap_container">
               <div class="header__top">
                 <div class="title"><h1><a href="../index.html" class="logo">노원당</a></h1></div>
-              </div>
-              <div class="header__login">
-                <ul class="header__login_ul">
-                  <li><div class="header__login_box"><a href="login.html">로그인</a></div></li>
-                  <li><div class="header___join_box"><a href="membership.html">회원가입</a></div></li>
-                </ul>
+                <div class="header__login">
+                  <ul class="header__login_ul">
+                    <li><div class="header__login_box"><a href="login.html">로그인</a></div></li>
+                    <li><div class="header___join_box"><a href="membership.html">회원가입</a></div></li>
+                  </ul>
+                </div>
               </div>
               <!-- 휴대폰 및 태블릿 메뉴 태그 -->
               <div class="icon_wrap">
@@ -95,40 +95,40 @@
                 <div class="test"></div>
                 <ul class="header__menu_ul">
                 
-                  <li><a href="#"><h2>브랜드소개</h2>
+                  <li><a href="#"><h2>브랜드소개</h2></a>
                     <ul class="header__menu_drop_ul">
                       <li><a href="#">브랜드역사</a></li>
                       <li><a href="#">브랜드소개</a></li>
                     </ul>     
-                  </a></li>
-                  <li><a href="#"><h2>메뉴소개</h2>
+                  </li>
+                  <li><a href="#"><h2>메뉴소개</h2></a>
                     <ul class="header__menu_drop_ul"> 
                       <li><a href="best.html">베스트</a></li>
                       <li><a href="#">신상품</a></li>
                       <li><a href="#">식빵</a></li>
                       <li><a href="#">케이크</a></li>
                     </ul>                   
-                  </a></li>
-                  <li><a href="#"><h2>가맹점</h2>
+                  </li>
+                  <li><a href="#"><h2>가맹점</h2></a>
                     <ul class="header__menu_drop_ul">
                       <li><a href="#">프렌차이즈</a></li>
                       <li><a href="#">가맹문의</a></li>
                       <li><a href="#">지점안내</a></li>
                     </ul>                 
-                  </a></li>
-                  <li><a href="#"><h2>온라인주문</h2>
+                  </li>
+                  <li><a href="#"><h2>온라인주문</h2></a>
                     <ul class="header__menu_drop_ul">
                       <li><a href="#">주문하기</a></li>
                       <li><a href="#">단체주문</a></li>
                     </ul>                 
-                  </a></li>
-                  <li><a href="#"><h2>새소식</h2>
+                  </li>
+                  <li><a href="#"><h2>새소식</h2></a>
                     <ul class="header__menu_drop_ul">
                       <li><a href="#">프로모션</a></li>
                       <li><a href="#">뉴스</a></li>
                       <li><a href="#">광고영상</a></li>
                     </ul>                 
-                  </a></li>
+                  </li>
                 </ul>
               </div>
             </div>
