--- a/project/team/index.html
+++ b/project/team/index.html
@@ -151,6 +151,7 @@
             <section class="main">
                 <!--메인화면이미지-->
                 <div><img src="images/main1.jpg" id="mainimg" alt="메인1"></div>
+                <div><img src="images/m_main1.jpg" id="Mobilemainimg" alt=""></div>
                 <a href="#" class="prev" onClick="prev(); return false"><i class="fa-solid fa-angle-left"></i></a>
                 <a href="#" class="next" onClick="next(); return false"><i class="fa-solid fa-angle-right"></i></a>
 
