--- a/day38/마을버스 요금보기 프로그램.html
+++ b/day38/마을버스 요금보기 프로그램.html
@@ -6,90 +6,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>요금보기</title>
+    <script src="js/bus.js" defer></script>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+        }
+
+        body {
+            padding: 20px;
+        }
+
+        #result {
+            width: 100%;
+            min-height: 300px;
+            background: lightyellow;
+        }
+    </style>
 </head>
 
 <body>
+    <h1>마을버스 요금보기 프로그램</h1>
+    <label for="">출발정거장<select id="start"></select></label>
+    <label for="">도착정거장<select id="end"></select></label><br>
+    <label><input type="radio" value="adult" name="people" checked /> 어른(일반)</label>
+    <label><input type="radio" value="young" name="people" /> 청소년</label>
+    <label><input type="radio" value="child" name="people" /> 어린이</label><br>
+    <button type="button" onclick="calculator()">버스요금보기</button>
 
-    청백아파트1단지
-
-    대우아파트
-
-    청백아파트
-
-    월계주공2단지앞
-
-    월계주공2단지
-
-    월계공단
-
-    염광고등학교
-
-    신창중학교후문
-
-    유원극동아파트
-
-    쌍용스윗닷홈아파트
-
-    초안아파트.흥화브라운빌아파트
-
-    한승미메이드아파트
-
-    창3동염광아트빌
-
-    북서울농협창동지점
-
-    신화초교입구
-
-    신창교
-
-    북부수도사업소
-
-    번동사거리
-
-    창동서울탁주앞
-
-    창동.신창시장
-
-    국립현대미술관창동레지던시
-
-    창림초교창동신창아파트앞
-
-    도봉문화정보도서관
-
-    창동주공4단지
-
-    녹천북부역
-
-    창1동대우그린아파트
-
-    창일중학교
-
-    창동역서측
-
-    상아아파트
-
-    창동주공1단지
-
-    창5동현대1차아파트
-
-    도봉구보건소앞
-
-    쌍문동금호1차삼익아파트
-
-    쌍문동현대.한양아파트
-
-    쌍문동성원아파트
-
-    세그루학원
-
-    둘리뮤지엄.대우이안극동아파트
-
-    옛고을길입구
-
-    정의여중고입구
-
-    창동고등학교
-
+    <!-- 버스요금이 보여지는 영역 -->
+    <div id="result"> </div>
 
 </body>
 
